﻿[B]1.0.6[/B]
- Sorozat bugfix
[B]1.0.5[/B]
- BugFix
[B]1.0.4[/B]
- Keresés lapozásának (Következő oldal) javítása
[B]1.0.3[/B]
- Felirat kiírása utf-8-ként, feiratos megjelenítés módosítása
[B]1.0.2[/B]
- Sorozat felirat kezelése
[B]1.0.1[/B]
- Üres oldal kezelése
[B]1.0.0[/B]
- Első verzió